# x11-clipboard-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: cli.rs  error.rs  main.rs
src/subcommand/: copy.rs  paste.rs
tests/: cb.rs
