[package]
name = "x11-clipboard-rs"
version = "0.1.0"
edition = "2021"
authors = ["MITSUBOSHI <yuya.mitsuboshi@gmail.com>"]
description = "X11 cliboard copy and paste command line tool"
keywords = ["x11", "clipboard", "copy", "paste"]
license = "MIT"

[[bin]]
path = "src/main.rs"
name = "cb"

[dependencies]
clap = { version = "*", features = ["derive"] }
thiserror = { version = "*" }
